# x86_emulator

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
.github/workflows/: build-and-test.yml
scripts/: assemble.sh
src/: CMakeLists.txt  Cpu.h  IInstruction.h  Memory.h  Register.h  Widths.h  main.cpp
src/basicComponents/: CMakeLists.txt  Cpu.cpp  Cpu.h  Flags.h  Fpu.cpp  Fpu.h  InstructionDecoder.cpp  InstructionDecoder.h  Memory.h  Register.h  Widths.h
src/instructions/: CMakeLists.txt  InstructionIfc.h  InstructionsRegistry.cpp  InstructionsRegistry.h  add.h  invalid.h  mov.h  nop.h  push.h  sub.h
src/instructions/util/: CMakeLists.txt  InstructionData.cpp  InstructionData.h  InstructionIfc.cpp  InstructionIfc.h  InstructionsRegistry.cpp  InstructionsRegistry.h  register_code.h
src/main/: Cpu.cpp  Cpu.h  Flags.h  IInstruction.h  Memory.h  Register.h  main.cpp
src/main/instructions/: add.h  invalid.h  push.h  sub.h
src/main/instructions/util/: register_code.h
src/test/: binary_runner.cpp  instruction.cpp  logical_address.cpp  memory.cpp  register.cpp  status.cpp
src/test/util/: BinaryRunner.h
src/utility/: CMakeLists.txt  InstructionDecoder.cpp  InstructionDecoder.h
test/: CMakeLists.txt  InstructionDecoderTest.cpp  binary_runner.cpp  fpu.cpp  instruction.cpp  logical_address.cpp  memory.cpp  register.cpp  status.cpp
test/data/asm/: noops.asm  push.asm
test/data/compiled/: push
test/util/: BinaryRunner.h
